--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -83,7 +83,7 @@ stages:
             artifact: drop
           - task: AzureWebApp@1
             displayName: 'Azure App Service Deploy: website'
-            inputs:
-              azureSubscription: 'Resource Manager - Tailspin - Space Game'
-              appName: '$(WebAppName)'
-              package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
+           # inputs:
+             # azureSubscription: 'Resource Manager - Tailspin - Space Game'
+             # appName: '$(WebAppName)'
+             # package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
